src/objects/SEO_Report_Schedule__c.object
<CustomObject>
    <description>SEO reports scheduled sending date</description>
    <fields>
        <fullName>Number_of_Emails_Sent__c</fullName>
        <label>Number of Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SEO Report Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Schedule_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Emails_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SEO Report Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEO Report Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>